# biophysics

computational-cell/: Dockerfile  LICENSE  README.md  pyproject.toml
computational-cell/cc/: __init__.py
computational-cell/cc/core/: __init__.py  run.py  simulation.py
computational-cell/cc/coupling/: __init__.py  coupler.py
computational-cell/cc/geometry/: __init__.py  mesh.py
computational-cell/cc/io/: __init__.py  manager.py
computational-cell/cc/kinetics/: __init__.py  reaction_network.py
computational-cell/cc/pde/: __init__.py  diffusion_solver.py
computational-cell/computational_cell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
computational-cell/examples/minimal_wholecell/: README.md  config.yaml  create_mesh.py  run_example.py
computational-cell/notebooks/: minimal_wholecell_validation.ipynb
computational-cell/tests/: README.md  conftest.py  test_core.py  test_geometry.py  test_integration.py  test_kinetics.py  test_pde.py
dna-knot-visualizer/: LICENSE  README.md  demo.py  requirements.txt  setup.cfg  setup.py  validate.py
dna-knot-visualizer/dna_knot/: __init__.py  __main__.py
dna-knot-visualizer/dna_knot/core/: __init__.py  constants.py  types.py
dna-knot-visualizer/dna_knot/generators/: __init__.py  prime.py  random_polygon.py  torus.py
dna-knot-visualizer/dna_knot/invariants/: __init__.py  alexander.py  basic.py
dna-knot-visualizer/dna_knot/io/: __init__.py  export.py  session.py
dna-knot-visualizer/dna_knot/projection/: __init__.py  projector.py  utils.py
dna-knot-visualizer/dna_knot/simplification/: __init__.py  energy.py
dna-knot-visualizer/dna_knot/visualization/: __init__.py  plot3d.py  svg_diagram.py
dna-knot-visualizer/dna_knot_visualizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dna-knot-visualizer/examples/: __init__.py  example_polynomials.py  example_simplification.py  example_trefoil.py
dna-knot-visualizer/output/: test_knot.json  trefoil_session.json
dna-knot-visualizer/tests/: test_dna_knot.py
syn-bio-sim/: README.md  requirements.txt  setup.sh
syn-bio-sim/circuits/: and_gate.yaml  feedforward_loop.yaml  repressilator.yaml  toggle_switch.yaml
syn-bio-sim/core/: __init__.py  circuit_graph.py  config.py  simulation.py
syn-bio-sim/core/analysis/: sensitivity.py
syn-bio-sim/core/kinetics/: __init__.py  rate_laws.py
syn-bio-sim/core/solvers/: __init__.py  ode_solver.py  stochastic_solver.py
syn-bio-sim/core/utils/: circuit_visualizer.py  export.py  visualization.py
syn-bio-sim/demos/: advanced_analysis.py  circuit_gallery.py  quick_start.py  toggle_switch_demo.py
syn-bio-sim/tests/: test_core.py
